# etda

./: .gitignore  HUNTINGTON_OPTIMIZATION.md  LICENSE  README.md  RUNNING.md  pyproject.toml
etda/: core.py
examples/: huntington_optimization_example.py
